--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@tabler/icons-react": "^3.2.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.1.5",
-    "next": "14.2.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.2.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
