--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-scroll-wheel-handler": "^2.2.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
+    "spotify-web-api-js": "^1.5.2",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
