--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@prisma/client": "^6.2.1",
     "@tabler/icons-react": "^3.2.0",
     "@tsparticles/engine": "^3.3.0",
     "@tsparticles/react": "^3.0.0",
@@ -20,6 +21,7 @@
     "clsx": "^2.1.0",
     "framer-motion": "^11.1.7",
     "next": "14.2.1",
+    "prisma": "^6.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-scroll-wheel-handler": "^2.2.0",
